# StudySphere

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  Doxyfile  README.md  StudySphere.lnk  dockerfile  format-code.bat  format-code.sh
app/: ServerCommunicator.h  app.pro
app/StudySphereServer/: .gitignore  CMakeLists.txt  Server.h  mainwindow.cpp  myServer.cpp  myServer.h
app/forms/: createdeckdialog.ui  createdeckwindow.ui  deckpreviewwindow.ui  logindialog.ui  mainwindow.ui  statswindow.ui  studysessiongui.ui  studysessionwindow.ui  whiteboardwindow.ui
app/lib/: activity.h  activityitem.h  browser.h  calendar.h  calendarevent.h  card.h  cardcontent.h  cardstats.h  createdeckdialog.h  createdeckwindow.h  deck.h  deckitem.h  deckpreviewwindow.h  deckrating.h  deckstats.h  grading.h  imagecard.h  jsonserializer.h  library.h  libraryalt.h  libraryscene.h  logindialog.h  mainwindow.h  plaincard.h  planner.h  plannerscene.h  plnner.h  scheduleitem.h  serializable.h  serializer.h  servercommunicator.h  settings.h  statswindow.h  studysession.h  studysessiongui.h  studysessionwindow.h  todolist.h  user.h  whiteboardwindow.h
app/res/: icons.qrc  themes.qrc  translations.qrc
app/src/: activity.cpp  activityitem.cpp  browser.cpp  calendar.cpp  calendarevent.cpp  card.cpp  cardcontent.cpp  cardstats.cpp  createdeckdialog.cpp  createdeckwindow.cpp  deck.cpp  deckitem.cpp  deckrating.cpp  (+24 more)
docs/: Documentation.docx  creating_flashcard_description.md  creating_flashcards_deck_description.md  exporting_flashcards_deck_description.md  importing_flashcards_deck_description.md  use_case_diagram.drawio  using_flashcards_deck_description.md
server/: CMakeLists.txt  Privacy.h  dockerfile  main.cpp  myServer.cpp  myServer.h
server/tests/: CMakeLists.txt  test_myserver.cpp
tests/: CMakeLists.txt  catch.hpp  main.cpp  test_activity.cpp  test_card.cpp  test_deck.cpp  test_deckstats.cpp  test_firstone.cpp  test_secondone.cpp  test_user.cpp  tests.pro
(+1173 files in other folders)
